# dwmstatusml

./: .gitignore  LICENSE  README.md  dune-project  dwmstatus.opam  dwmstatus.opam.template
lib/: dune
old/: config.mk  dwmstatus.c
src/: bar.ml  bat.ml  battery.ml  bitcoin.ml  date.ml  dune  main.ml  temp.ml  temperature.ml  time.ml
test/: dune
